--- a/android/assets/jsons/translations/Dutch.properties
+++ b/android/assets/jsons/translations/Dutch.properties
@@ -236,8 +236,8 @@ Personality = Persoonlijkheid
 Influence = Invloed
 Reach 30 for friendship. = Bereik 30 voor vriendschap
 Reach highest influence above 60 for alliance. = Bereik hoogste invloed boven 60 voor een alliantie
-When Friends: = Als bevriend:
-When Allies: = Als geallieerd:
+When Friends: = wanneer bevriend:
+When Allies: = wanneer geallieerd:
 The unique luxury is one of: = Het unieke luxegoed is een van: 
 
 Demand Tribute = Eis een erebetaling op
@@ -347,7 +347,7 @@ Time = Tijd
 ? = ?
 
 Map Shape = Kaartvorm
-Hexagonal = Hexagonaal
+Hexagonal = Zeshoekig
 Rectangular = Vierkant
 Height = Hoogte
 Width = Breedte
@@ -839,7 +839,7 @@ Convert production to gold at a rate of 4 to 1 = Zet productie om in goud voor e
 Convert production to science at a rate of [rate] to 1 = Zet productie om in wetenschap voor een ratio van [rate] tegen 1
 The city will not produce anything. = Deze stad zal niets produceren.
 Worked by [cityName] = Bewerkt door [cityName]
-Lock = Zet vast
+Lock = vergendel
 Unlock = Maak los
 Move to city = Verplaatst naar stad
 Please enter a new name for your city = Vul een nieuwe naam voor je stad in 
@@ -7131,7 +7131,7 @@ This Unit upgrades for free including special upgrades =
  # Requires translation!
 This Unit gains the [promotion] promotion = 
  # Requires translation!
-Hidden before founding a Pantheon = 
+Hidden before founding a Pantheon = verborgen totdat het Pantheon is gebouwd
  # Requires translation!
 Hidden after founding a Pantheon = 
  # Requires translation!
